[package]
name = "encore"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-maximize", "window-show", "window-unmaximize", "window-start-dragging", "window-minimize", "window-unminimize", "window-hide", "window-close", "shell-open", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
devtools = "0.3.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
